2012-08-06  Antoine Labour  <piman@chromium.org>

        [chromium] add sync points and GL_CHROMIUM_texture_mailbox entrypoints to WebGraphicsContext3D
        https://bugs.webkit.org/show_bug.cgi?id=93313

        Reviewed by James Robinson.

        Sync points already landed chromium-side, mailbos at https://chromiumcodereview.appspot.com/10829209/

        * chromium/public/WebGraphicsContext3D.h:
        (WebKit::WebGraphicsContext3D::insertSyncPoint):
        (WebKit::WebGraphicsContext3D::waitSyncPoint):
        (WebGraphicsContext3D):
        (WebKit::WebGraphicsContext3D::genMailboxCHROMIUM):
        (WebKit::WebGraphicsContext3D::produceTextureCHROMIUM):
        (WebKit::WebGraphicsContext3D::consumeTextureCHROMIUM):

2012-08-06  Adrienne Walker  <enne@google.com>

        [chromium] Convert WebScrollbarThemeGeometry from a concrete class to an interface
        https://bugs.webkit.org/show_bug.cgi?id=93308

        Reviewed by James Robinson.

        Convert WebScrollbarThemeGeometry to be an interface. Update
        WebScrollbarLayer to take a pointer to this interface.

        * chromium/public/WebScrollbarLayer.h:
        (WebScrollbarLayer):
        * chromium/public/WebScrollbarThemeGeometry.h:
        (WebScrollbarThemeGeometry):

2012-08-06  Adam Barth  <abarth@webkit.org>

        [Chromium] WebTouchCandidatesInfo should be part of the Client API
        https://bugs.webkit.org/show_bug.cgi?id=93088

        Reviewed by Eric Seidel.

        All the input related interfaces are part of the client (rather than
        the platform) part of the API. This patch moves WebTouchCandidatesInfo
        to the client part of the API.

        * Platform.gypi:
        * chromium/public/WebTouchCandidatesInfo.h: Removed.

2012-08-03  Nico Weber  <thakis@chromium.org>

        [chromium] Add API to make it possible to request all variants of a WebImage
        https://bugs.webkit.org/show_bug.cgi?id=92933

        Reviewed by Adam Barth.
